use JDK 8 List primitives